syntax = "proto3";

package user;

option go_package = "github.com/viktoralyoshin/nookly/user-service/userpb";

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
}